[gd_scene load_steps=24 format=3 uid="uid://xoyf1p6wpauf"]

[ext_resource type="Script" path="res://enemies/skeleton_old.gd" id="1_ruxpn"]
[ext_resource type="PackedScene" uid="uid://b5tqfixcajuia" path="res://effects/shadows/shadow.tscn" id="2_040bx"]
[ext_resource type="Shader" path="res://enemies/flash.gdshader" id="3_1xclx"]
[ext_resource type="Texture2D" uid="uid://bitnrbqjchb8t" path="res://enemies/skeleton.png" id="4_ons8f"]
[ext_resource type="PackedScene" uid="uid://bsgrxe74ukwf0" path="res://enemies/hitbox.tscn" id="5_irvm1"]
[ext_resource type="Texture2D" uid="uid://dalt2q3r0fb5i" path="res://items/assets/dagger.png" id="6_f5pi0"]
[ext_resource type="PackedScene" uid="uid://7iwnq73xgxcm" path="res://enemies/hurtbox.tscn" id="7_t4fv3"]
[ext_resource type="Texture2D" uid="uid://bfuyljigtd8ev" path="res://icon.svg" id="8_f6rob"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_elyu2"]
shader = ExtResource("3_1xclx")
shader_parameter/flash = false

[sub_resource type="CircleShape2D" id="CircleShape2D_b8xyb"]
radius = 1.41421

[sub_resource type="Animation" id="Animation_nadoj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_cm0s8"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t442q"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_6pvfp"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_x2we3"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahyo2"]
_data = {
"RESET": SubResource("Animation_nadoj"),
"idle": SubResource("Animation_cm0s8"),
"idle_up": SubResource("Animation_t442q"),
"walk": SubResource("Animation_6pvfp"),
"walk_up": SubResource("Animation_x2we3")
}

[sub_resource type="Animation" id="Animation_e620k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dagger_x_augment")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shoulder/Dagger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shoulder/Dagger/Hurtbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_04r34"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dagger_x_augment")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0, -2.0, 17.0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shoulder/Dagger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [-3.14159, 0.0, 0.0, -3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shoulder/Dagger/Hurtbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_md7g2"]
resource_name = "attack_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dagger_x_augment")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0, -2.0, 17.0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shoulder/Dagger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [-3.14159, 0.0, 0.0, -3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3pi7l"]
_data = {
"RESET": SubResource("Animation_e620k"),
"attack": SubResource("Animation_04r34"),
"attack_2": SubResource("Animation_md7g2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4km2h"]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_okt7n"]
radius = 83.0241

[sub_resource type="CircleShape2D" id="CircleShape2D_00pjm"]
radius = 4.0

[node name="skeleton" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 65
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ruxpn")

[node name="shadow" parent="." instance=ExtResource("2_040bx")]
position = Vector2(-3, -1)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_elyu2")
position = Vector2(-6, -20)
texture = ExtResource("4_ons8f")
centered = false
hframes = 13
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_b8xyb")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ahyo2")
}

[node name="Attack" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3pi7l")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Hitbox" parent="." instance=ExtResource("5_irvm1")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_4km2h")

[node name="Idle Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack Timer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="Flash Timer" type="Timer" parent="."]
one_shot = true

[node name="Sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
visible = false
shape = SubResource("CircleShape2D_okt7n")

[node name="Node2D" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Node2D"]
position = Vector2(0, 20)

[node name="Shoulder" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="Dagger" type="Sprite2D" parent="Shoulder"]
position = Vector2(-9, 0)
rotation = -3.14159
texture = ExtResource("6_f5pi0")

[node name="Hurtbox" parent="Shoulder/Dagger" instance=ExtResource("7_t4fv3")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Shoulder/Dagger/Hurtbox"]
position = Vector2(3, -1.33514e-05)
rotation = 3.14159
shape = SubResource("CircleShape2D_00pjm")
disabled = true

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-114, -6)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("8_f6rob")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="knockback" from="Hitbox" to="." method="_on_hitbox_knockback"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Sight" to="." method="_on_sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_sight_area_exited"]
